<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_bridge</name>
  <version>0.1.0</version>
  <description>Example action bridges for FibonacciAction and FollowJointTrajectoryAction</description>

  <maintainer email="harshavardhan.deshpande@ipa.fraunhofer.de">Harshavardhan Deshpande</maintainer>

  <license>Apache License 2.0</license>

  <author email="harshavardhan.deshpande@ipa.fraunhofer.de">Harshavardhan Deshpande</author>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: state ROS1 and ROS2 dependencies -->
  <depend>control_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
